--- a/package.json
+++ b/package.json
@@ -1,50 +1,76 @@
 {
-  "name": "stacker2",
-  "version": "0.1.0",
+  "name": "react-boilerplate",
   "private": true,
-  "dependencies": {
-    "@chakra-ui/react": "^1.0.0",
-    "@emotion/react": "^11.0.0",
-    "@emotion/styled": "^11.0.0",
-    "@testing-library/jest-dom": "^5.9.0",
-    "@testing-library/react": "^10.2.1",
-    "@testing-library/user-event": "^12.0.2",
-    "@types/cannon": "^0.1.5",
-    "@types/jest": "^25.0.0",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
-    "@types/three": "^0.126.2",
-    "cannon": "^0.6.2",
-    "framer-motion": "^4.0.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-icons": "^4.2.0",
-    "react-scripts": "4.0.3",
-    "three": "^0.126.1",
-    "tone": "^14.7.77",
-    "typescript": "^3.9.5",
-    "web-vitals": "^0.2.2"
-  },
+  "version": "0.0.0",
   "scripts": {
-    "dev": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
+    "prepare": "husky install",
+    "lint:fix": "eslint --fix --ext .js,.ts,.tsx ./src --ignore-path .gitignore",
+    "prettier": "prettier --ignore-path .gitignore --write \"**/*.+(js|json|ts|tsx)\"",
+    "clean": "rm -rf node_modules/ && rm -rf yarn.lock && yarn && yarn start",
+    "test": "vitest",
+    "coverage": "vitest run --coverage"
   },
-  "eslintConfig": {
-    "extends": "react-app"
+  "dependencies": {
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
+    "@headlessui/react": "^1.6.6",
+    "@react-hook/window-size": "^3.0.7",
+    "clsx": "^1.2.1",
+    "date-fns": "^2.29.1",
+    "formik": "^2.2.9",
+    "framer-motion": "^7.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
+    "react-router-dom": "^6.3.0",
+    "tailwindcss-border-gradient-radius": "^3.0.1",
+    "yup": "^0.32.11",
+    "@chakra-ui/react": "^1.0.0",
+    "cannon": "^0.6.2",
+    "three": "^0.126.1",
+    "tone": "^14.7.77"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/react-hooks": "^8.0.1",
+    "@testing-library/user-event": "^14.4.2",
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6",
+    "@types/react-router-dom": "^5.3.3",
+    "@typescript-eslint/eslint-plugin": "^5.32.0",
+    "@typescript-eslint/parser": "^5.32.0",
+    "@vitejs/plugin-react": "^2.0.0",
+    "autoprefixer": "^10.4.8",
+    "c8": "^7.12.0",
+    "eslint": "^8.21.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-import-resolver-typescript": "^3.4.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jest-dom": "^4.0.2",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-tailwindcss": "^3.6.0",
+    "eslint-plugin-testing-library": "^5.6.0",
+    "husky": "^8.0.1",
+    "jsdom": "^20.0.0",
+    "postcss": "^8.4.14",
+    "prettier": "^2.7.1",
+    "tailwind-scrollbar": "^1.3.1",
+    "tailwind-scrollbar-hide": "^1.1.7",
+    "tailwindcss": "^3.1.7",
+    "typescript": "^4.7.4",
+    "vite": "^3.0.4",
+    "vite-plugin-checker": "^0.4.9",
+    "vite-plugin-pwa": "^0.12.3",
+    "vite-tsconfig-paths": "^3.5.0",
+    "vitest": "^0.20.3",
+    "@types/cannon": "^0.1.5",
+    "@types/three": "^0.126.2"
   }
 }
